# meshexec

./: .cz.toml  .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  codecov.yml  config.yml  justfile  network_commands.yml  package-lock.json
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: check.yml  release.yml  test.yml
.helix/: config.toml
deployment/chocolatey/: chocolateyinstall.ps1.template  meshexec.nuspec.template
deployment/homebrew/: meshexec.rb.template
examples/: config.yml
examples/subcommands/: network_commands.yml  secret_commands.yml
examples/subcommands/network_subcommands/: docker_commands.yml
src/: cli.rs  command.rs  config.rs  lib.rs  logging.rs  main.rs  transport.rs  utils.rs
tests/: cli.rs
