[package]
name = "meshexec"
version = "0.0.1"
authors = ["Alex Clarke <alex.j.tusa@gmail.com>"]
description = "Manage remote devices over the Meshtastic mesh. Define command aliases, execute them remotely via private channels, and get output back in chunks"
keywords = ["meshtastic", "mesh-network", "remote-execution", "iot", "lora"]
documentation = "https://github.com/Dark-Alex-17/meshexec"
repository = "https://github.com/Dark-Alex-17/meshexec"
homepage = "https://github.com/Dark-Alex-17/meshexec"
readme = "README.md"
license = "MIT"
edition = "2024"
rust-version = "1.89.0"
exclude = [".github", "CONTRIBUTING.md", "*.log", "tags"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
meshtastic = { version = "0.1.8", features = ["tokio"] }
backtrace = "0.3.76"
human-panic = "2.0.6"
log = "0.4.29"
log4rs = "1.4.0"
crossterm = "0.29.0"
dirs-next = "2.0.0"
regex = "1.12.2"
colored = "3.1.1"
ctrlc = "3.5.1"
tokio-util = "0.7.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
indoc = "2.0.7"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["user-hooks"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
proptest = "1"
tempfile = "3"
